# Computer-Graphics-Project

./: .gitignore  CMakeLists.txt  README.md  RayTracer Classes.txt  RayTracer Notes.txt  finalRayTracerTest.xml  run.sh
OpenGL/: CMakeLists.txt  Camera.cpp  Camera.h  glfwExample.cpp
raytracer/: Blinn-Phong.cpp  Blinn-Phong.h  Box.cpp  Box.h  CMakeLists.txt  CMakeLists.txt.txt  Camera.cpp  Camera.h  Glaze.cpp  Glaze.h  Instance.cpp  Instance.h  LambertianShader.cpp  Light.h  RaytracerClasses.h  Reflective.cpp  Reflective.h  Scene.cpp  Scene.h  SceneDataTypes.h  Shader.h  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  camera.cpp  camera.h  rayTracerMain.cpp  scene.h  shape.h  sphere.cpp  sphere.h  testScene.cpp
